--- a/index.htm
+++ b/index.htm
@@ -12,7 +12,7 @@
         <div class="header__container">
             <div class="lesson">
                 <div class="logo">
-                    <h3 class="Web">Web.Dev</h3>
+                    <h2 class="Web">Web.Dev</h2>
                 </div>
                 <nav class="nav">
                     <a class="nav__link" href="#">Home</a>
@@ -21,7 +21,7 @@
                     <a class="nav__link" href="#">Contact</a>
                 </nav>
                 <div class="dactop">
-                    <a href="#">Sign in</a>
+                    <a class="cool" href="#">Sign in</a>
                     <button class="button">
                         Sign up
                     </button>
